# django-atlassian-connect

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: tox.yaml
django_atlassian/: urls.py
django_atlassian/templates/django_atlassian/confluence/: atlassian-connect.json
django_atlassian_connect/: __init__.py  admin.py  apps.py  decorators.py  dynamic.py  fields.py  issues.py  links.py  managers.py  middleware.py  properties.py  signals.py  tasks.py  upm.py  urls.py  views.py
django_atlassian_connect/management/commands/: expose.py  install.py
django_atlassian_connect/migrations/: 0001_initial.py  0002_securitycontext_product_type.py  0003_securitycontext_oauth_client_id.py  0004_auto_20230204_0811.py
django_atlassian_connect/models/: connect.py
django_atlassian_connect/templates/django_atlassian_connect/: atlassian_connect_base.json  base.html
django_atlassian_connect/templates/django_atlassian_connect/confluence/: atlassian-connect.json  atlassian_connect.json
django_atlassian_connect/templates/django_atlassian_connect/jira/: atlassian-connect.json  (+1 more)
django_atlassian_connect/templatetags/: ajs.py
django_atlassian_connect/tests/: test_decorators.py  test_dynamic.py  test_signals.py  test_signed.py  test_view_jiradescriptor.py  test_view_jiradescriptor_urls.py  test_view_lifecycleinstalled.py
docs/source/: conf.py  index.rst
example/: settings.py  urls.py
example/helloworld/: apps.py  urls.py  views.py
test/: settings.py
tests/: settings.py  urls.py
(+1 files in other folders)
