[tool.poetry]
name = "django-atlassian-connect"
version = "0.1.0"
description = "Atlassian Connect based applications in Django"
authors = ["Fluendo S.A. <contact@fluendo.com>"]
license = "MIT"
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2 || ^3.0"
atlassian-jwt = "^1.8.1"
requests = "^2.18.4"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
coverage = "*"
flake8 = "*"
isort = "*"
tox = "*"
pre-commit = "*"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 

[tool.isort]
profile = "black"
line_length = 88
